--- a/howitworks.html
+++ b/howitworks.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=70860" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=70860" type="text/javascript"></script>
+    <link href="css/main.css?v=85052" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=85052" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -145,113 +145,100 @@
                 </div>
               </div>
             </div>
-            <div class="section__plans"> 
-              <div class="cols"> 
-                <div class="col-md-9"> 
-                  <div class="section__card"> 
-                    <div class="section__table"> 
-                      <table>
-                        <thead>
-                          <tr>
-                            <th>Columna 1</th>
-                            <th>Columna 2</th>
-                            <th>Columna 3</th>
-                            <th>Columna 4</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td>Fila 1, Celda 1</td>
-                            <td>Fila 1, Celda 2</td>
-                            <td>Fila 1, Celda 3</td>
-                            <td>Fila 1, Celda 4</td>
-                          </tr>
-                          <tr>
-                            <td>Fila 2, Celda 1</td>
-                            <td>Fila 2, Celda 2</td>
-                            <td>Fila 2, Celda 3</td>
-                            <td>Fila 2, Celda 4</td>
-                          </tr>
-                          <tr>
-                            <td>Fila 3, Celda 1</td>
-                            <td>Fila 3, Celda 2</td>
-                            <td>Fila 3, Celda 3</td>
-                            <td>Fila 3, Celda 4</td>
-                          </tr>
-                          <tr>
-                            <td>Fila 4, Celda 1</td>
-                            <td>Fila 4, Celda 2</td>
-                            <td>Fila 4, Celda 3</td>
-                            <td>Fila 4, Celda 4</td>
-                          </tr>
-                          <tr>
-                            <td>Fila 5, Celda 1</td>
-                            <td>Fila 5, Celda 2</td>
-                            <td>Fila 5, Celda 3</td>
-                            <td>Fila 5, Celda 4</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
-                  <div class="section__card">
-                    <div class="section__table section__table--footer"> 
-                      <table>
-                        <tbody>
-                          <tr>
-                            <td>Plan mensual</td>
-                            <td>$6.990</td>
-                            <td>$9.990</td>
-                            <td>$13.990</td>
-                          </tr>
-                          <tr>
-                            <td>Plan anual</td>
-                            <td>$71.298 15% DCTO<a href="" class="btn">Lo quiero!</a></td>
-                            <td>$95.904 20% DCTO<a href="" class="btn">Lo quiero!</a></td>
-                            <td>$125.910 25% DCTO<a href="" class="btn">Lo quiero!</a></td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
+            <div class="section__plans section__plans--table">
+              <div class="section__card"> 
+                <div class="section__table"> 
+                  <table>
+                    <thead>
+                      <tr>
+                        <th class="th--gray">Características</th>
+                        <th class="th--green">Plan Silver</th>
+                        <th class="th--violet">Plan Gold</th>
+                        <th class="th--orange">Plan Premium</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Firmas para mí renovables mensualmente </td>
+                        <td>Ilimitadas</td>
+                        <td>Ilimitadas</td>
+                        <td>Ilimitadas</td>
+                      </tr>
+                      <tr>
+                        <td>Firmas de un uso para terceros </td>
+                        <td>3 Renovable mensualmente </td>
+                        <td>9 Renovable mensualmente </td>
+                        <td>14 9 Renovable mensualmente</td>
+                      </tr>
+                      <tr>
+                        <td>Custodia de documentos permanente </td>
+                        <td>500 Documentos </td>
+                        <td>1000 Documentos </td>
+                        <td>2500 Documentos </td>
+                      </tr>
+                      <tr>
+                        <td>Valor firma adicional de un uso para terceros </td>
+                        <td>$2.390 c/u</td>
+                        <td>$2.190 c/u</td>
+                        <td>$1.990 c/u</td>
+                      </tr>
+                      <tr>
+                        <td>Compra de firmas por tramos.</td>
+                        <td> <img src="img/icons/cancel.svg" alt="" srcset=""></td>
+                        <td><img src="img/icons/cancel.svg" alt="" srcset=""></td>
+                        <td><img src="img/icons/check-ok.svg" alt="" srcset=""></td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
-                <div class="col-md-3">
-                  <div class="section__card"> 
-                    <div class="section__corporate">
-                      <div class="section__header"> 
-                        <h3 class="section__title">Plan Corporativo </h3>
-                        <div class="section__icon"> <img src="" alt=""></div>
-                      </div>
-                      <div class="section__body"> 
-                        <ul> 
-                          <li>Cantidad de firmas y firmantes según requerimientos.</li>
-                          <li>Firmas simples y avanzadas con diversos métodos de verificación de identidad.</li>
-                          <li>Soluciones de integración vía API.</li>
-                          <li>Perfiles personalizados según tu necesidad.</li>
-                          <li>Portal personalizable a tu medida.</li>
-                        </ul>
-                      </div>
-                      <div class="section__footer"> <a href="" class="btn">Contactanos </a></div>
-                    </div>
-                  </div>
+              </div>
+              <div class="section__card">
+                <div class="section__table section__table--footer"> 
+                  <table>
+                    <tbody>
+                      <tr>
+                        <td>Plan mensual</td>
+                        <td>$6.990</td>
+                        <td>$9.990</td>
+                        <td>$13.990</td>
+                      </tr>
+                      <tr>
+                        <td>Plan anual</td>
+                        <td>  
+                          <p>$71.298 15% DCTO</p>
+                          <p>Precio normal $83.880</p><a href="" class="btn">Lo quiero!</a>
+                        </td>
+                        <td> 
+                          <p>$95.904 20% DCTO</p>
+                          <p>Precio normal $83.880</p><a href="" class="btn">Lo quiero!</a>
+                        </td>
+                        <td> 
+                          <p>$125.910 25% DCTO</p>
+                          <p>Precio normal $83.880</p><a href="" class="btn">Lo quiero!</a>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
             <div class="section__step section__step--3">
               <div class="cols"> 
                 <div class="col-md-3">
-                  <div class="section__icon"> <img src="" alt="" srcset=""></div>
+                  <div class="section__icon"> <img src="img/icons/guy-with-computer.png" alt="" srcset=""></div>
                 </div>
                 <div class="col-md-9">
                   <div class="section__content"> 
-                    <h3 class="section__title">Crea tu certificado de firma</h3>
-                    <p class="section__description">Para crear tu firma avanzada tendremos que verificar que eres tú. Este proceso es sencillo: responde algunas preguntas, verifica tu correo y ten a mano tu cédula de identidad. Crea una clave para el certificado, almacénala (no la olvides) y ya puedes comenzar a firmar.</p>
+                    <div class="section__inside">
+                      <h3 class="section__title">Crea tu certificado de firma</h3>
+                      <p class="section__description">Para crear tu firma avanzada tendremos que verificar que eres tú. Este proceso es sencillo: responde algunas preguntas, verifica tu correo y ten a mano tu cédula de identidad. Crea una clave para el certificado, almacénala (no la olvides) y ya puedes comenzar a firmar.</p>
+                    </div>
                     <p class="section__stepnumber">3</p>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="section__icon"> <img src="img/icons/continuar2.svg" alt="" srcset=""></div>
+            <div class="section__arrow"><img src="img/icons/continuar2.svg" alt="" srcset=""></div>
             <div class="section__step section__step--4">
               <div class="cols"> 
                 <div class="col-md-3"> 
@@ -270,19 +257,21 @@
             <div class="section__step section__step--5">
               <div class="cols"> 
                 <div class="col-md-3">
-                  <div class="section__icon"> <img src="img/new-contract.png" alt="" srcset=""></div>
+                  <div class="section__icon"> <img src="img/icons/new-contract.png" alt="" srcset=""></div>
                 </div>
                 <div class="col-md-9">
-                  <div class="section__content"> 
-                    <h3 class="section__title">Firma documentos</h3>
-                    <ul> 
-                      <li>Carga tus documentos</li>
-                      <li>Selecciona él o los firmantes</li>
-                      <li>Posiciona la imagen de firma y envía</li>
-                      <li>Relájate</li>
-                    </ul><span>Recuerda que al momento de firmar un documento, solicitaremos la clave de tu certificado.</span>
+                  <div class="section__content">
+                    <div class="section__list">
+                      <h3 class="section__title">Firma documentos</h3>
+                      <ul> 
+                        <li>Carga tus documentos</li>
+                        <li>Selecciona él o los firmantes</li>
+                        <li>Posiciona la imagen de firma y envía</li>
+                        <li>Relájate</li>
+                      </ul><span>Recuerda que al momento de firmar un documento, solicitaremos la clave de tu certificado.</span>
+                    </div>
+                    <p class="section__stepnumber">5</p>
                   </div>
-                  <p class="section__stepnumber">5</p>
                 </div>
               </div>
             </div>
@@ -335,16 +324,7 @@
             </div>
           </div>
           <div class="footer__center">
-            <div class="footer__links">
-              <h4 class="footer__title">E-CERTCHILE</h4>
-              <ul>
-                <li><a href="#">Cómo funciona</a></li>
-                <li><a href="#">Preguntas frecuentes</a></li>
-                <li><a href="#">Contáctanos</a></li>
-                <li><a href="#">Validar firmas</a></li>
-                <li><a href="#">e-certchile</a></li>
-              </ul>
-            </div>
+            <div class="footer__links"></div>
           </div>
         </div>
         <div class="footer__secondary">
